# eye-ai-platform

./: .mcp.json  404.html  ECOSYSTEM.md  README.md  index.html  mkdocs.yml  sitemap.xml  tacit-knowledge.md
.github/ISSUE_TEMPLATE/: feature-registration.md
.github/workflows/: deploy-docs.yml  integration-test.yml  notify-release.yml
MAINTENANCE/: index.html
design/architecture/: index.html
design/diagnosis-severity-definitions/: index.html
design/implementation-spec/: index.html
docs/: MAINTENANCE.md  index.md
docs/design/: architecture.md  diagnosis-severity-definitions.md  implementation-spec.md
docs/guides/: catalog-migration.md  etl-workflow.md  experiment-tracing.md
docs/onboarding/: catalog-overview.md  mcp-setup.md  new-researcher.md  quickstart.md  update-env.md
docs/releases/: CHANGELOG.md  compatibility-matrix.md
guides/catalog-migration/: index.html
guides/etl-workflow/: index.html
guides/experiment-tracing/: index.html
lockfiles/stable/: README.md  manifest.toml  pyproject.toml
onboarding/catalog-overview/: index.html
onboarding/mcp-setup/: index.html
onboarding/new-researcher/: index.html
onboarding/quickstart/: index.html
onboarding/update-env/: index.html
releases/CHANGELOG/: index.html
releases/compatibility-matrix/: index.html
search/: search_index.json
templates/researcher-repo/: cookiecutter.json
templates/researcher-repo/{{cookiecutter.project_name}}/: README.md  pyproject.toml
templates/researcher-repo/{{cookiecutter.project_name}}/.github/: renovate.json
templates/researcher-repo/{{cookiecutter.project_name}}/catalog_patches/: README.md
templates/researcher-repo/{{cookiecutter.project_name}}/data/: export_config.yaml  prepare.py
tests/integration/: test_stack_imports.py
